<resources>
    <string name="app_name">Мой двор</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_menu_stock">Акции рядом</string>
    <string name="title_menu_message">Чат</string>
    <string name="title_menu_news">Новости</string>
    <string name="title_menu_service">Услуги</string>
    <string name="title_menu_notification">Уведомления</string>
    <string name="send_message">Отправить</string>
    <string name="send_post">Опубликовать</string>
    <string name="password">Пароль</string>
    <string name="confirmation">Подтверждение пароля</string>
    <string name="registration">Регистрация</string>
    <string name="back">Назад</string>
    <string name="login">Войти</string>
    <string name="sender">Отправитель</string>
    <string name="example_date">12.12.2018</string>
    <string name="example_text">Текст</string>
    <string name="title">Название</string>
    <string name="textview">TextView</string>
    <string name="image">image</string>
    <string name="one">1</string>
    <string name="provider">Поставщик</string>
    <string name="phone_number">8 800 000 00 00</string>
    <string name="header">Заголовок</string>
    <string name="title_menu_menu">Меню</string>
    <string name="settings">Настройки</string>
    <string name="logout">Выход</string>
    <string name="apartment">Квартира</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="lately">Здесь пока ничего нет, возращайтесь позже!</string>
    <string name="title_menu_emergency">Экстренные вызовы</string>
    <string name="your_company_is">Вы обслуживаетесь в </string>
    <string name="delete_image">Удалить картинку</string>
    <string name="add_image">Добавить картинку</string>
    <string name="delete_post">Удалить пост</string>
    <string name="like">Нравится</string>
    <string name="dislike">Не нравится</string>
    <string name="share">Поделиться</string>
    <string name="calls">Вызовы</string>
    <string name="update_name">Настройки имени</string>
    <string name="update_name_hint">Имя Фамилия</string>
    <string name="update_address">Настройка адреса</string>
    <string name="delete_me">Удалиться</string>
    <string name="update_email_password">Настройка входа</string>
    <string name="email">Электронная почта</string>
    <string name="empty_email">Поле электронной почты пустое!</string>
    <string name="empty_full_name">Поле имени пустое!</string>
    <string name="not_full_name">Поле имени включает в себя имя и фамилию</string>
    <string name="empty_password">Поле пароля пустое!</string>
    <string name="new_password">Введите новый пароль</string>
    <string name="successful_email_change">Успешно изменён электронный адрес</string>
    <string name="unsuccessful_email_changing">Электронный адрес не изменён</string>
    <string name="successful_password_changing">Успешно изменён пароль</string>
    <string name="unsuccessful_password_changing">Пароль не изменён</string>
    <string name="successful_name_changing">Успешно изменено имя</string>
    <string name="account_deletion">Удаление аккаунта</string>
    <string name="delete">Удалить</string>
    <string name="discard">Отмена</string>
    <string name="unsuccessful_account_deletion">Аккаунт не удалился</string>
    <string name="accept">Подтвердить</string>
    <string name="password_changing_warning">Изменение пароля невозможно, если Вы давно не заходили</string>
    <string name="require_old_password">Для подтверждения введите Ваш текущий пароль</string>
    <string name="update_address_button">Обновить адрес</string>
    <string name="successful_address_changing">Адрес успешно изменён</string>
    <string name="unsuccessful_relogin">Пароль от аккаунта неверный!</string>
    <string name="empty_apartment">Поле квартиры пустое!</string>
    <string name="about">О приложении</string>
    <string name="app_icon_desc">Иконка приложения</string>
    <string name="version">Версия %1$s</string>
    <string name="about_team">Приложение разработано\nкомандой The Name, УрФУ</string>
</resources>
