<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/emergencyFragment"
        android:icon="@drawable/ic_call_black_24dp"
        android:title="@string/calls" />
    <item
        android:id="@+id/stockFragment"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/title_menu_stock" />
    <item
        android:id="@+id/messageFragment"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_menu_message" />
    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_menu_notification" />
    <item
        android:id="@+id/menuFragment"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="@string/title_menu_menu" />
</menu>