<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="136dp"
        android:layout_height="87dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/header" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_text"
            android:textColor="@color/colorBackGround" />

        <TextView
            android:id="@+id/adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/textview"
            android:textAlignment="textEnd" />

    </LinearLayout>
</LinearLayout>