<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".menu.MenuFragment">

    <Button
            android:id="@+id/ib_news"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_menu_news"
            android:drawablePadding="5dp"
            android:text="@string/title_menu_news"
            android:textAlignment="textStart" />

    <Button
            android:id="@+id/ib_stock"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_menu_stock"
            android:drawablePadding="5dp"
            android:text="@string/title_menu_stock"
            android:textAlignment="textStart" />

    <Button
            android:id="@+id/ib_message"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_menu_message"
            android:drawablePadding="5dp"
            android:text="@string/title_menu_message"
            android:textAlignment="textStart" />

    <Button
            android:id="@+id/ib_notification"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_menu_notif"
            android:drawablePadding="5dp"
            android:text="@string/title_menu_notification"
            android:textAlignment="textStart" />

    <Button
            android:id="@+id/ib_service"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_menu_service"
            android:drawablePadding="5dp"
            android:enabled="false"
            android:text="@string/title_menu_service"
            android:textAlignment="textStart" />

    <Button
            android:id="@+id/ib_settings"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_menu_settings"
            android:drawablePadding="5dp"
            android:enabled="false"
            android:text="@string/settings"
            android:textAlignment="textStart" />

    <Button
            android:id="@+id/ib_logout"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_menu_logout"
            android:drawablePadding="5dp"
            android:text="@string/logout"
            android:textAlignment="textStart" />
</LinearLayout>