<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_post"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_marginTop="@dimen/default_margin"
        android:ems="10"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_send"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/send_post"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_post" />

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/default_margin"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/im_add_image"
        app:layout_constraintTop_toBottomOf="@+id/et_post" />

    <ImageButton
        android:id="@+id/ib_delete_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete_image"
        android:src="@drawable/ic_delete_forever_black_24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/im_add_image"
        app:layout_constraintTop_toBottomOf="@+id/et_post" />

    <ImageButton
        android:id="@+id/im_add_image"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:contentDescription="@string/add_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_post"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ListView
        android:id="@+id/lv_news"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_send" />

</androidx.constraintlayout.widget.ConstraintLayout>

